cherry-pick pip-compile update

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -19,7 +19,4 @@
 pyrsistent>=0.16.1,<0.17
 zipp==3.4.1
 sasl==0.3.1
-packaging==21.0
-wrapt==1.12.1
-certifi==2021.5.30
-charset-normalizer==2.0.4
+wrapt==1.12.1  # required by astroid<2.9 until we bump pylint
